--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -1,56 +1,84 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>MFT</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,400&display=swap" rel="stylesheet">
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="./main.js"></script>
-    </head>
-    <body>
-        <div class="background-video-wrapper">
-            <video autoplay muted loop class="background-video">
-                <source src="./videos/2019_02_27_14_31_57_Program_1_black.mp4" type="video/mp4">
-                <source src="./videos/2019_02_27_14_31_57_Program_2_black.mp4" type="video/mp4">
-                <source src="./videos/2019_02_27_14_31_57_Program_3_black.mp4" type="video/mp4">
-            </video>
-        </div>
 
-        <div class="page-container">
-            <div class="page">
-                <div class="clock-wrapper">
-                    <div class="title"> Mean Fish Time</div>
-                    <div class="clock"> <span class="hours">00</span>h <span class="minutes">00</span>m <span class="seconds">00</span>s </div>
+<head>
+    <meta charset="utf-8">
+    <script src="https://kit.fontawesome.com/4d43271b95.js" crossorigin="anonymous"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>MFT</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:100,400&display=swap" rel="stylesheet">
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./main.js"></script>
+</head>
+
+<body>
+    <div class="background-video-wrapper">
+        <video autoplay muted loop class="background-video">
+            <source src="./videos/2019_02_27_14_31_57_Program_1_black.mp4" type="video/mp4">
+            <source src="./videos/2019_02_27_14_31_57_Program_2_black.mp4" type="video/mp4">
+            <source src="./videos/2019_02_27_14_31_57_Program_3_black.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div class="page-container">
+        <div class="page">
+            <div class="clock-wrapper">
+                <div class="title"> Mean Fish Time</div>
+                <div class="clock"> <span class="hours">00</span>h <span class="minutes">00</span>m <span class="seconds">00</span>s
                 </div>
             </div>
-            <div class="page">
-                <div class="split-screen">
-                    <div> 
-                        <canvas id="myChart"></canvas>
+        </div>
+        <div class="page">
+            <div class="split-screen">
+                <div>
+                    <canvas id="myChart"></canvas>
+                </div>
+                <div class="about-container">
+                    <div class="text-wrapper">
+                        <div class="about-title">
+                            <div> A </div>
+                            <div> Digital Clock </div>
+                            <div> from an </div>
+                            <div> Organic Signal</div>
+                        </div>
+                        <div class="about-body">
+                            <p> The Apteronotus albifrons, or Black ghost knifefish, is a species of weakly electric
+                                fish that can sense its environment by releasing and receiving EM waves. </p>
+                            <p> It has a special nervous system for releasing these signals. This system is one of the
+                                most accurate known biological clocks. The neurons that comprise it fire 100x more
+                                frequently than human neurons are capable of.</p>
+                            <p> Using a passive sensor, we can capture this signal and turn it into a global clock. </p>
+                        </div>
                     </div>
-                    <div class="about-container">  
-                        <div class="text-wrapper"> 
-                            <div class="about-title"> 
-                                <div> A </div>
-                                <div> Digital Clock </div>
-                                <div> from an </div>
-                                <div> Organic Signal</div>
+                </div>
+            </div>
+        </div>
+        <div class="page">
+            <div class="container-fluid">
+                <div class="row" style="margin:20px"><h1>Creators</h1></div>
+                <div class="row">
+                    <div class="col justify-content-center">
+                        <div class="card text-center">
+                            <i class="fas fa-robot fa-5x card-img-top"></i>
+                            <div class="card-body">
+                                <h5 class="card-title"><span style="color:orange">Andre Telfer</span>  is evolving.</h5>
                             </div>
-                            <div class="about-body">
-                                <p> The Apteronotus albifrons, or Black ghost knifefish, is a species of weakly electric fish that can sense its environment by releasing and receiving EM waves. </p>
-                                <p> It has a special nervous system for releasing these signals. This system is one of the most accurate known biological clocks. The neurons that comprise it fire 100x more frequently than human neurons are capable of.</p>
-                                <p> Using a passive sensor, we can capture this signal and turn it into a global clock. </p>
+                        </div>
+                    </div>
+                    <div class="col justify-content-center">
+                        <div class="card text-center">
+                                <i class="fas fa-satellite fa-5x card-img-top"></i>
+                            <div class="card-body">
+                                <h5 class="card-title"><span style="color:orange">Abrar Ahmad</span> is blasting off again.</h5>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="page">
-                
-            </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
