added uOttawa thanks

--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -57,10 +57,10 @@
         </div>
         <div class="page">
             <div class="container-fluid">
-                <div class="row" style="margin:20px"><h1>Creators</h1></div>
+                <div class="row" style="margin:20px"><h3>Creators</h3></div>
                 <div class="row">
                     <div class="col justify-content-center">
-                        <div class="card text-center">
+                        <div class="card primary-author  text-center">
                             <i class="fas fa-robot fa-5x card-img-top"></i>
                             <div class="card-body">
                                 <h5 class="card-title"><span style="color:orange">Andre Telfer</span>  is evolving.</h5>
@@ -68,11 +68,18 @@
                         </div>
                     </div>
                     <div class="col justify-content-center">
-                        <div class="card text-center">
+                        <div class="card primary-author text-center">
                                 <i class="fas fa-satellite fa-5x card-img-top"></i>
                             <div class="card-body">
                                 <h5 class="card-title"><span style="color:orange">Abrar Ahmad</span> is blasting off again.</h5>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row-fluid">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <p class="card-text">Special thanks to John Lewis and Aaron Shifman @uOttawa.</p>
                         </div>
                     </div>
                 </div>
