--- a/demo/public/index.html
+++ b/demo/public/index.html
@@ -59,16 +59,16 @@
             <div class="container-fluid">
                 <div class="row" style="margin:20px"><h3>Creators</h3></div>
                 <div class="row">
-                    <div class="col justify-content-center">
-                        <div class="card primary-author  text-center">
+                    <div class="col justify-content-center d-flex">
+                        <div class="card primary-author text-center flex-fill">
                             <i class="fas fa-robot fa-5x card-img-top"></i>
                             <div class="card-body">
                                 <h5 class="card-title"><span style="color:orange">Andre Telfer</span>  is evolving.</h5>
                             </div>
                         </div>
                     </div>
-                    <div class="col justify-content-center">
-                        <div class="card primary-author text-center">
+                    <div class="col justify-content-center d-flex">
+                        <div class="card primary-author text-center flex-fill">
                                 <i class="fas fa-satellite fa-5x card-img-top"></i>
                             <div class="card-body">
                                 <h5 class="card-title"><span style="color:orange">Abrar Ahmad</span> is blasting off again.</h5>
